<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>ch.sbb.simba</groupId>
    <artifactId>umlego</artifactId>
    <version>2.0.1-SNAPSHOT</version>

    <name>${project.artifactId}</name>
    <description>Macroscopic Demand Assignment for Public Transport.</description>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Umlego Maven Packages</name>
            <url>https://maven.pkg.github.com/SchweizerischeBundesbahnen/Umlego</url>
        </repository>
    </distributionManagement>

    <repositories>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <!-- Repository for MATSim releases and snapshots (MATSim is not on Maven central) -->
            <id>matsim</id>
            <url>https://repo.matsim.org/repository/matsim</url>
        </repository>


        <repository>
            <!-- Geotools is not on Maven central -->
            <id>osgeo</id>
            <name>Geotools repository</name>
            <!--<url>http://download.osgeo.org/webdav/geotools</url>-->
            <url>https://repo.osgeo.org/repository/release/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>jogl</id>
            <url>https://jogamp.org/deployment/maven/</url>
        </repository>
        <repository>
            <id>msmobility-msm</id>
            <url>https://dl.cloudsmith.io/public/msmobility/msm/maven/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>

    </repositories>

    <properties>
        <matsim.version>2026.0-PR3998</matsim.version>
        <junit.version>5.10.2</junit.version>
        <geotools.version>31.2</geotools.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.matsim</groupId>
            <artifactId>matsim</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <dependency>
            <groupId>org.matsim</groupId>
            <artifactId>matsim</artifactId>
            <version>${matsim.version}</version>
            <classifier>tests</classifier>
            <scope>test</scope>
            <type>test-jar</type>
        </dependency>


        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>sbb-extensions</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>2.17.2</version>
        </dependency>

        <!-- Needed to read OMX files -->
        <dependency>
            <groupId>io.jhdf</groupId>
            <artifactId>jhdf</artifactId>
            <version>0.9.4</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- Needed for libraries using slf4j -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>2.24.3</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>5.11</version>
        </dependency>

        <!-- Command line parsing library -->
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>4.7.7</version>
        </dependency>

        <!-- Config library -->
        <dependency>
            <groupId>com.github.gestalt-config</groupId>
            <artifactId>gestalt-core</artifactId>
            <version>0.35.7</version>
        </dependency>
        <dependency>
            <groupId>com.github.gestalt-config</groupId>
            <artifactId>gestalt-yaml</artifactId>
            <version>0.35.7</version>
        </dependency>

        <!-- JSch library to handle SFTP connections -->
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jsch</artifactId>
            <version>0.1.55</version>
        </dependency>

        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.5.0</version>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20250107</version>
        </dependency>

        <!-- Test if our implementation gives the same result as OMX -->
        <dependency>
            <groupId>omx</groupId>
            <artifactId>omx</artifactId>
            <version>2</version>
            <scope>test</scope>
        </dependency>

        <!-- Include the JUnit testing library -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.25.3</version>
            <scope>test</scope>
        </dependency>

        <!-- Mockito JUnit Jupiter Integration -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.14.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Mockito Core -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.14.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Mockito inline -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>3.4.0</version> <!-- or the latest version -->
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>4.0.0</version>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                </executions>
                <configuration>
                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                    <dateFormat>yyyyMMdd_HHmmss</dateFormat>
                </configuration>

            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>ch.sbb.matsim.RunSBB</mainClass>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                        <manifestEntries>
                            <Specification-Vendor>SBB CFF FFS</Specification-Vendor>
                            <Implementation-Vendor>SBB CFF FFS</Implementation-Vendor>
                            <Multi-Release>true</Multi-Release>
                        </manifestEntries>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <includes>
                        <include>**/*IT.java</include>
                        <include>**/Test*.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                        <include>**/*TestCase.java</include>
                    </includes>
                    <forkedProcessExitTimeoutInSeconds>1200</forkedProcessExitTimeoutInSeconds>

                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
